--- a/DwGuitar/DwGuitar.csproj
+++ b/DwGuitar/DwGuitar.csproj
@@ -35,13 +35,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="CSkin">
-      <HintPath>..\..\..\..\..\Desktop\CSkin 16.1.14.2\CSkin 16.1.14.2\CSkin 4.0\CSkin.dll</HintPath>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -87,6 +80,12 @@
     <Compile Include="Sql.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabPictureView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TabPictureView.Designer.cs">
+      <DependentUpon>TabPictureView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BlogDataGridView.resx">
       <DependentUpon>BlogDataGridView.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +101,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TabPictureView.resx">
+      <DependentUpon>TabPictureView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="blog.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
